# cratespro

./: Cargo.toml  rust-toolchain.toml
data_transporter/: study.md
data_transporter/src/: data_reader.rs  db.rs  redis_store.rs
database/entity/src/: metadata.rs  mod.rs  prelude.rs  programs.rs  repository_contributor.rs
database/migration/: .env  README.md
database/migration/src/: lib.rs  m20250407_094050_alter_programs.rs  m20250604_133200_init_repository_metadata.rs
database/src/storage/: evaluate_database.rs  github_handler_storage.rs  mod.rs
evaluate/: Cargo.toml  README.md  config.toml
evaluate/src/: config.rs  main.rs  manager.rs
evaluate/src/pass/: activity.rs  maintainability.rs  maturity.rs  mod.rs  openness.rs  popularity.rs
github-handler/src/: main.rs
github-handler/src/services/: github_api.rs
model/src/: github.rs
