[package]
name = "evaluate"
version = "0.1.0"
edition = "2021"

[dependencies]
database = { workspace = true }
entity = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0"
sea-orm = { workspace = true, features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "chrono"] }
anyhow = { workspace = true }
tokio = { workspace = true, features = ["full"] }
futures = "0.3"
config = "0.15"
chrono = { workspace = true }
